Added Postgres schema, added server routes for user

--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "A simple Node.js + Express backend connected to PostgreSQL to demonstrate understanding of the framework.",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "pg": "^8.19.0"
